# progettoSistemi

./: .gitignore  AUTHOR.txt  CMakeLists.txt  README.md  config_machine.json  klog.c  term0.uriscv
headers/: const.h  types.h
phase1/: asl.c  p1test.c  pcb.c
phase1/headers/: asl.h  pcb.h
phase2/: exceptions.c  initial.c  interrupts.c  p2test.c  scheduler.c
phase2/headers/: initial.h  scheduler.h
phase2/include/: initial.h  scheduler.h
